# Intelligent-Document-Assistant-with-OCR-RAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  test2.py
data/: goldens.csv
faiss_index/session_20260723_035803_22e8f9c5/faiss_index/: faiss_index.faiss  faiss_index.pkl
faiss_index/session_20260723_123055_94560990/faiss_index/: faiss_index.pkl
faiss_index/session_20260723_223628_12265195/faiss_index/: faiss_index.pkl
faiss_index/session_20260723_223952_072749fd/faiss_index/: faiss_index.pkl
faiss_index/session_20260723_224217_df023927/faiss_index/: faiss_index.pkl
faiss_index/session_20260724_000942_d9fe5bf5/faiss_index/: faiss_index.pkl
faiss_index/session_20260724_113020_bbe7cd19/faiss_index/: faiss_index.pkl
faiss_index/session_20260724_115033_3c67ee3d/faiss_index/: faiss_index.faiss  faiss_index.pkl
faiss_index/session_20260724_120052_a4eaade8/faiss_index/: faiss_index.pkl
faiss_index/session_20260724_120143_fcd1be5c/faiss_index/: faiss_index.faiss  faiss_index.pkl
faiss_index/session_20260724_121140_35b7a57f/faiss_index/: faiss_index.pkl
faiss_index/session_20260724_121316_459e804b/faiss_index/: faiss_index.faiss  faiss_index.pkl
faiss_index/session_20260724_122559_a70d61bf/faiss_index/: faiss_index.faiss  (+1 more)
multi_doc_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
multi_doc_chat/config/: config.yaml
multi_doc_chat/exception/: custom_exception.py
multi_doc_chat/logger/: __init__.py  custom_logger.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
notebook/: RAG.ipynb  evaluations.ipynb
static/: script.js  style.css
templates/: index.html
(+16 files in other folders)
