[project]
name = "intelligent-document-assistant-with-ocr-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=5.6.0",
]
