[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_doc_chat"
version = "0.1.0"
description = "Intelligent Document Assistant with OCR and RAG"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "rapidocr-onnxruntime>=1.4.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "docx2txt>=0.8",
    "python-multipart>=0.0.6",
    "pandas>=2.0.0",
    "fastapi>=0.100.0",
    "uvicor
    "ipykernel>=6.20.0",
    "langsmith>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["multi_doc_chat*"]
exclude = ["data*", "faiss_index*", "logs*", "notebook*", "test*"]
index*", "logs*", "notebook*", "test*"]]test*"]